--- a/Code/templates/weather_map.html
+++ b/Code/templates/weather_map.html
@@ -25,7 +25,7 @@
             <meta name="viewport" content="width=device-width,
                 initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
             <style>
-                #map_680abc27f39e99aae5444b3dcdc61156 {
+                #map_bd88430411239411918ecd4bcc3c6463 {
                     position: relative;
                     width: 100.0%;
                     height: 100.0%;
@@ -39,16 +39,16 @@
 <body>
     
     
-            <div class="folium-map" id="map_680abc27f39e99aae5444b3dcdc61156" ></div>
+            <div class="folium-map" id="map_bd88430411239411918ecd4bcc3c6463" ></div>
         
 </body>
 <script>
     
     
-            var map_680abc27f39e99aae5444b3dcdc61156 = L.map(
-                "map_680abc27f39e99aae5444b3dcdc61156",
+            var map_bd88430411239411918ecd4bcc3c6463 = L.map(
+                "map_bd88430411239411918ecd4bcc3c6463",
                 {
-                    center: [51.4425, 3.5736],
+                    center: [40.7898, -73.7471],
                     crs: L.CRS.EPSG3857,
                     zoom: 10,
                     zoomControl: true,
@@ -60,31 +60,31 @@
 
         
     
-            var tile_layer_916de12a7a56f3f1ac34cd4e4d4ee7e2 = L.tileLayer(
+            var tile_layer_6f82f779a73b04bf7fd7a4ce25961590 = L.tileLayer(
                 "https://tile.openstreetmap.org/{z}/{x}/{y}.png",
                 {"attribution": "\u0026copy; \u003ca href=\"https://www.openstreetmap.org/copyright\"\u003eOpenStreetMap\u003c/a\u003e contributors", "detectRetina": false, "maxNativeZoom": 19, "maxZoom": 19, "minZoom": 0, "noWrap": false, "opacity": 1, "subdomains": "abc", "tms": false}
             );
         
     
-            tile_layer_916de12a7a56f3f1ac34cd4e4d4ee7e2.addTo(map_680abc27f39e99aae5444b3dcdc61156);
+            tile_layer_6f82f779a73b04bf7fd7a4ce25961590.addTo(map_bd88430411239411918ecd4bcc3c6463);
         
     
-            var marker_245c41ea4314ffc96e6bd296fa02b605 = L.marker(
-                [51.4425, 3.5736],
+            var marker_77b9eb4d4dc9103a18f590a056939a0b = L.marker(
+                [40.7898, -73.7471],
                 {}
-            ).addTo(map_680abc27f39e99aae5444b3dcdc61156);
+            ).addTo(map_bd88430411239411918ecd4bcc3c6463);
         
     
-        var popup_6ef6aed3661019fb73b9f35023801682 = L.popup({"maxWidth": "100%"});
+        var popup_f1ac0cece417bc665dca809957a08711 = L.popup({"maxWidth": "100%"});
 
         
             
-                var html_584abd553984a7be26b576fb84ee6b6d = $(`<div id="html_584abd553984a7be26b576fb84ee6b6d" style="width: 100.0%; height: 100.0%;">City: Flushing<br>Temperature: -170.39°F<br>Description: few clouds</div>`)[0];
-                popup_6ef6aed3661019fb73b9f35023801682.setContent(html_584abd553984a7be26b576fb84ee6b6d);
+                var html_9f01ebf9e97ecfee00e7dbb292ab3efb = $(`<div id="html_9f01ebf9e97ecfee00e7dbb292ab3efb" style="width: 100.0%; height: 100.0%;">City: Yonkers<br>Temperature: 59.45°F<br>Description: light intensity drizzle</div>`)[0];
+                popup_f1ac0cece417bc665dca809957a08711.setContent(html_9f01ebf9e97ecfee00e7dbb292ab3efb);
             
         
 
-        marker_245c41ea4314ffc96e6bd296fa02b605.bindPopup(popup_6ef6aed3661019fb73b9f35023801682)
+        marker_77b9eb4d4dc9103a18f590a056939a0b.bindPopup(popup_f1ac0cece417bc665dca809957a08711)
         ;
 
         
